--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <h1>Music Player</h1>
-    <div class="music-container play" id="music-container">
+    <div class="music-container" id="music-container">
         <div class="music-info">
             <h4 id="title"></h4>
             <div class="progress-container" id="progress-container">
@@ -22,10 +22,10 @@
             </div>
         </div>
 
-        <audio src="images/ukulele.jpg" id="audio"></audio>
+        <audio src="music/ukulele.mp3" id="audio"></audio>
 
         <div class="img-container">
-            <img src="img/ukulele.jpg" alt="music-cover" id="cover">
+            <img src="./img/ukulele.jpg" alt="music-cover" id="cover">
         </div>
         <div class="navigation">
             <button id="prev" class="action-btn">
