--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -25,7 +25,7 @@
         <audio src="music/ukulele.mp3" id="audio"></audio>
 
         <div class="img-container">
-            <img src="./img/ukulele.jpg" alt="music-cover" id="cover">
+            <img src="img/ukulele.jpg" alt="music-cover" id="cover">
         </div>
         <div class="navigation">
             <button id="prev" class="action-btn">
